style: add spacing between end icons and fix search input width

--- a/frontend/src/components/layout/pageLayout/pageLayout.module.css
+++ b/frontend/src/components/layout/pageLayout/pageLayout.module.css
@@ -80,6 +80,11 @@
   grid-column-end: content-end;
 }
 
+.row {
+  display: flex;
+  column-gap: var(--step--4);
+}
+
 @media screen and (max-width: 50rem) {
   .pageLayout {
     column-gap: 0;
